highlight entire line when selected

--- a/vscode/settings-default.jsonc
+++ b/vscode/settings-default.jsonc
@@ -8,6 +8,7 @@
     "comments": true,
     "strings": true
   },
+  "editor.renderLineHighlight": "all",
   "editor.tabSize": 2,
   "editor.wordWrap": "bounded",
   "explorer.confirmDelete": false,
