--- a/vscode/settings-default.jsonc
+++ b/vscode/settings-default.jsonc
@@ -9,16 +9,14 @@
     "strings": true
   },
   "editor.renderLineHighlight": "all",
+  "editor.suggest.maxVisibleSuggestions": 8,
+  "editor.suggest.showIcons": true,
   "editor.tabSize": 2,
-  "editor.wordWrap": "bounded",
+  "editor.wordWrap": "wordWrapColumn",
+  "editor.wordWrapColumn": 80,
   "explorer.confirmDelete": false,
   "explorer.confirmDragAndDrop": false,
   "explorer.sortOrder": "filesFirst",
-  "files.associations": {
-    "*.babel": "javascript",
-    "*.fish": "shellscript",
-    "fish_history": "shellscript"
-  },
   "files.exclude": {
     "**/.git": true,
     "**/.svn": true,
@@ -34,16 +32,20 @@
   "terminal.integrated.confirmOnExit": true,
   "terminal.integrated.fontSize": 16,
   "terminal.integrated.lineHeight": 1.3,
-  "terminal.integrated.shell.osx": "/usr/local/bin/fish",
+  "terminal.integrated.shell.osx": "/bin/zsh",
   "window.restoreWindows": "none",
   "workbench.commandPalette.history": 5,
-  "workbench.editor.enablePreview": false,
+  "workbench.editor.enablePreview": true,
   "workbench.settings.editor": "json",
   "workbench.settings.useSplitJSON": true,
+  "workbench.sideBar.location": "left",
   "workbench.startupEditor": "none",
   "workbench.statusBar.feedback.visible": false,
   // Extension Preferences
   "color-highlight.markRuler": false,
+  "emmet.includeLanguages": {
+    "javascript": "javascriptreact"
+  },
   "eslint.alwaysShowStatus": true,
   "eslint.autoFixOnSave": true,
   "gutterpreview.showImagePreviewOnGutter": false,
@@ -56,11 +58,10 @@
   "editor.formatOnSave": true,
   "html.format.enable": false,
   "javascript.format.enable": false,
-  // Theme customizations
-  "editor.tokenColorCustomizations": {
-    "[Nord]": {
-      "comments": "#66738e",
-      "strings": "#b48ead"
-    }
+  "[json]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[yaml]": {
+    "editor.defaultFormatter": "redhat.vscode-yaml"
   }
 }
