--- a/vscode/settings-default.jsonc
+++ b/vscode/settings-default.jsonc
@@ -12,8 +12,7 @@
   "editor.suggest.maxVisibleSuggestions": 8,
   "editor.suggest.showIcons": true,
   "editor.tabSize": 2,
-  "editor.wordWrap": "wordWrapColumn",
-  "editor.wordWrapColumn": 80,
+  "editor.wordWrap": "bounded",
   "explorer.confirmDelete": false,
   "explorer.confirmDragAndDrop": false,
   "explorer.sortOrder": "filesFirst",
@@ -34,15 +33,15 @@
   "terminal.integrated.lineHeight": 1.3,
   "terminal.integrated.shell.osx": "/bin/zsh",
   "window.restoreWindows": "none",
+  "workbench.colorTheme": "Nord",
   "workbench.commandPalette.history": 5,
-  "workbench.editor.enablePreview": true,
+  "workbench.editor.enablePreview": false,
   "workbench.settings.editor": "json",
   "workbench.settings.useSplitJSON": true,
   "workbench.sideBar.location": "left",
   "workbench.startupEditor": "none",
   "workbench.statusBar.feedback.visible": false,
   // Extension Preferences
-  "color-highlight.markRuler": false,
   "emmet.includeLanguages": {
     "vue-html": "html"
   },
@@ -51,7 +50,6 @@
   "gutterpreview.showImagePreviewOnGutter": false,
   "prettier.eslintIntegration": true,
   "prettier.stylelintIntegration": true,
-  "workbench.colorTheme": "Nord",
   "workbench.iconTheme": "material-icon-theme",
   // Format & lint
   "editor.formatOnPaste": true,
@@ -59,6 +57,9 @@
   "html.format.enable": false,
   "javascript.format.enable": false,
   "[json]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[jsonc]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[yaml]": {
