--- a/vscode/settings-default.jsonc
+++ b/vscode/settings-default.jsonc
@@ -1,4 +1,6 @@
 {
+  "editor.cursorBlinking": "phase",
+  "editor.cursorSmoothCaretAnimation": true,
   "editor.fontFamily": "Office Code Pro",
   "editor.fontSize": 18,
   "editor.lineHeight": 36,
@@ -15,6 +17,7 @@
   "editor.wordWrap": "bounded",
   "explorer.confirmDelete": false,
   "explorer.confirmDragAndDrop": false,
+  "explorer.openEditors.visible": 0,
   "explorer.sortOrder": "filesFirst",
   "files.exclude": {
     "**/.git": true,
@@ -33,15 +36,19 @@
   "terminal.integrated.lineHeight": 1.3,
   "terminal.integrated.shell.osx": "/bin/zsh",
   "window.restoreWindows": "none",
+  "window.title": "${dirty} ${activeEditorShort}${separator}${rootName}",
   "workbench.colorTheme": "Nord",
   "workbench.commandPalette.history": 5,
   "workbench.editor.enablePreview": false,
+  "workbench.editor.enablePreviewFromQuickOpen": false,
+  "workbench.settings.enableNaturalLanguageSearch": false,
   "workbench.settings.editor": "json",
   "workbench.settings.useSplitJSON": true,
   "workbench.sideBar.location": "left",
   "workbench.startupEditor": "none",
   "workbench.statusBar.feedback.visible": false,
   // Extension Preferences
+  "color-highlight.markRuler": false,
   "emmet.includeLanguages": {
     "vue-html": "html"
   },
