--- a/lint/.stylelintrc.yml
+++ b/lint/.stylelintrc.yml
@@ -17,18 +17,16 @@ rules:
   function-comma-space-after: always
   function-linear-gradient-no-nonstandard-direction: true
   function-parentheses-space-inside: never
-  function-url-quotes: never
   function-whitespace-after: always
   indentation: 2
   length-zero-no-unit: true
-  number-leading-zero: never
+  number-leading-zero: always
   number-max-precision: 4
-  property-no-vendor-prefix: true
-  rule-empty-line-before: always
+  rule-empty-line-before:
+    - always
+    - ignore: after-comment
   selector-max-class: 2
   selector-max-id: 2
-  selector-no-vendor-prefix: true
   shorthand-property-no-redundant-values: true
   string-no-newline: true
   string-quotes: double
-  value-no-vendor-prefix: true
