--- a/vscode/settings-tutorials.jsonc
+++ b/vscode/settings-tutorials.jsonc
@@ -1,8 +1,9 @@
 {
   "editor.cursorBlinking": "solid",
+  "editor.cursorSmoothCaretAnimation": false,
   "terminal.integrated.cursorBlinking": false,
   "window.zoomLevel": 2,
-  "workbench.colorTheme": "Dracula",
+  "workbench.colorTheme": "Spunky",
   "workbench.fontAliasing": "antialiased",
   "workbench.settings.useSplitJSON": false
 }
