--- a/vscode/settings-default.jsonc
+++ b/vscode/settings-default.jsonc
@@ -30,8 +30,7 @@
     "**/.hg": true,
     "**/.localized": true,
     "**/.svn": true,
-    "**/CVS": true,
-    "**/node_modules": true
+    "**/CVS": true
   },
   "files.trimTrailingWhitespace": true,
   // Terminal Settings
@@ -39,6 +38,7 @@
   "terminal.integrated.confirmOnExit": true,
   "terminal.integrated.fontSize": 16,
   "terminal.integrated.lineHeight": 1.3,
+  "terminal.integrated.rendererType": "canvas",
   "terminal.integrated.shell.osx": "/bin/zsh",
   // Window & Workbench Settings
   "window.restoreWindows": "none",
@@ -58,15 +58,16 @@
   // Extension Settings
   "colorize.enable_search_variables": false,
   "emmet.includeLanguages": {
-    "vue-html": "html"
+    "javascript": "javascriptreact",
+    "vue-html": "html",
+    "vue": "html"
   },
   "emmet.showSuggestionsAsSnippets": true,
   "eslint.alwaysShowStatus": true,
   "eslint.autoFixOnSave": true,
   "gutterpreview.showImagePreviewOnGutter": false,
-  "prettier.eslintIntegration": true,
-  "prettier.stylelintIntegration": true,
   // Format Settings
+  "css.validate": false,
   "editor.formatOnPaste": true,
   "editor.formatOnSave": true,
   "html.format.enable": false,
