--- a/vscode/settings-tutorials.jsonc
+++ b/vscode/settings-tutorials.jsonc
@@ -3,7 +3,5 @@
   "editor.cursorSmoothCaretAnimation": false,
   "terminal.integrated.cursorBlinking": false,
   "window.zoomLevel": 2,
-  "workbench.colorTheme": "Spunky",
-  "workbench.fontAliasing": "antialiased",
-  "workbench.settings.useSplitJSON": false
+  "workbench.fontAliasing": "antialiased"
 }
