--- a/vscode/settings.jsonc
+++ b/vscode/settings.jsonc
@@ -1,13 +1,19 @@
 {
-  // Editor Settings
-  "editor.acceptSuggestionOnEnter": "smart",
+  // Project Based Settings
   "editor.cursorBlinking": "phase",
   "editor.cursorSmoothCaretAnimation": true,
-  "editor.find.cursorMoveOnType": false,
-  "editor.fontFamily": "Cartograph CF",
-  "editor.fontLigatures": "'ss03'",
-  "editor.fontSize": 20,
+  "editor.fontFamily": "Office Code Pro",
+  "editor.fontLigatures": false,
   "editor.fontWeight": "400",
+  "editor.snippetSuggestions": "bottom",
+  "explorer.sortOrder": "filesFirst",
+  "terminal.integrated.cursorBlinking": true,
+  "window.zoomLevel": 0,
+  "workbench.colorTheme": "Spunky",
+  // Editor Settings
+  "editor.acceptSuggestionOnEnter": "smart",
+  "editor.find.cursorMoveOnType": false,
+  "editor.fontSize": 20,
   "editor.formatOnSaveMode": "file",
   "editor.lineHeight": 40,
   "editor.minimap.enabled": false,
@@ -22,7 +28,8 @@
   "editor.rulers": [
     80
   ],
-  "editor.snippetSuggestions": "bottom",
+  "editor.suggest.insertMode": "replace",
+  "editor.suggest.showStatusBar": true,
   "editor.tabSize": 2,
   "editor.unusualLineTerminators": "auto",
   "editor.wordWrap": "bounded",
@@ -33,7 +40,6 @@
   "explorer.confirmDelete": false,
   "explorer.confirmDragAndDrop": false,
   "explorer.openEditors.visible": 0,
-  "explorer.sortOrder": "filesFirst",
   "files.exclude": {
     "**/CVS": true,
     "**/.DS_Store": true,
@@ -45,13 +51,11 @@
   "files.trimTrailingWhitespace": true,
   // Terminal Settings
   "terminal.integrated.confirmOnExit": true,
-  "terminal.integrated.cursorBlinking": true,
-  "terminal.integrated.fontSize": 16,
-  "terminal.integrated.shell.osx": "/bin/zsh",
+  "terminal.integrated.fontSize": 20,
+  "terminal.integrated.shell.osx": "/usr/local/bin/zsh",
   // Window & Workbench Settings
   "window.restoreWindows": "none",
   "window.titleBarStyle": "custom",
-  "workbench.colorTheme": "Spunky",
   "workbench.commandPalette.history": 4,
   "workbench.editor.enablePreview": false,
   "workbench.editor.enablePreviewFromQuickOpen": false,
@@ -81,9 +85,7 @@
   "emmet.excludeLanguages": [],
   "emmet.includeLanguages": {
     "javascript": "javascriptreact",
-    "markdown": "html",
-    "vue-html": "html",
-    "vue": "html"
+    "markdown": "html"
   },
   "emmet.showSuggestionsAsSnippets": false,
   "eslint.alwaysShowStatus": true,
